src/objects/Assesments__c.object
<CustomObject>
    <fields>
        <fullName>F_Retail_Apps__c</fullName>
        <formula>IF(INCLUDES(Retail_Apps__c, &quot;Store Operations&quot;), &quot;Store Operations&quot; + BR(),Null) +
IF(INCLUDES(Retail_Apps__c, &quot;Clienteling&quot;), &quot;Clienteling&quot; + BR(),Null) +
IF(INCLUDES(Retail_Apps__c, &quot;Store Inspection&quot;), &quot;Store Inspection&quot; + BR(),Null) +
IF(INCLUDES(Retail_Apps__c, &quot;Sales Productivity&quot;), &quot;Sales Productivity&quot; + BR(),Null) +
IF(INCLUDES(Retail_Apps__c, &quot;Merchandising Optimization&quot;), &quot;Merchandising Optimization&quot; + BR(),Null) +
IF(INCLUDES(Retail_Apps__c, &quot;Promotional Analysis and Planning&quot;), &quot;Promotional Analysis and Planning&quot; + BR(),Null) +
IF(INCLUDES(Retail_Apps__c, &quot;Customer Insight Analysis&quot;), &quot;Customer Insight Analysis&quot; + BR(),Null) +
IF(INCLUDES(Retail_Apps__c, &quot;Loss Prevention&quot;), &quot;Loss Prevention&quot; + BR(),Null) +
IF(INCLUDES(Retail_Apps__c, &quot;Supply Chain Management&quot;), &quot;Supply Chain Management&quot; + BR(),Null) +
IF(INCLUDES(Retail_Apps__c, &quot;Vendor Portal&quot;), &quot;Vendor Portal&quot; + BR(),Null) +
IF(INCLUDES(Retail_Apps__c, &quot;Financial Analysis&quot;), &quot;Financial Analysis&quot; + BR(),Null) +
IF(INCLUDES(Retail_Apps__c, &quot;Distribution Center Operations&quot;), &quot;Distribution Center Operations&quot; + BR(),Null) +
IF(INCLUDES(Retail_Apps__c, &quot;Secure Access with Digital Badges&quot;), &quot;Secure Access with Digital Badges&quot; + BR(),Null) +
IF(INCLUDES(Retail_Apps__c, &quot;Digital Loyalty Card&quot;), &quot;Digital Loyalty Card&quot; + BR(),Null) + 
IF(INCLUDES(Banking_Apps__c, &quot;Other&quot;), &quot;Other&quot; + BR(),Null)</formula>
        <label>Retail Apps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Sales_Apps__c</fullName>
        <formula>IF(INCLUDES(Sales_Apps__c, &quot;Sales Enablement&quot;), &quot;Sales Enablement&quot; + BR(),Null) +
IF(INCLUDES(Sales_Apps__c, &quot;CRM Sales Analytics&quot;), &quot;CRM Sales Analytics&quot; + BR(),Null) +
IF(INCLUDES(Sales_Apps__c, &quot;Sales Productivity&quot;), &quot;Sales Productivity&quot; + BR(),Null) +
IF(INCLUDES(Sales_Apps__c, &quot;Customer Engagement&quot;), &quot;Customer Engagement&quot; + BR(),Null) +
IF(INCLUDES(Sales_Apps__c, &quot;Field Workbench&quot;), &quot;Field Workbench&quot; + BR(),Null) +
IF(INCLUDES(Sales_Apps__c, &quot;Sales Executive Workbench&quot;), &quot;Sales Executive Workbench&quot; + BR(),Null) +
IF(INCLUDES(Sales_Apps__c, &quot;Sales Renewals&quot;), &quot;Sales Renewals&quot; + BR(),Null) +
IF(INCLUDES(Sales_Apps__c, &quot;Sales Compensation&quot;), &quot;Sales Compensation&quot; + BR(),Null) +
IF(INCLUDES(Sales_Apps__c, &quot;Territory and Quota Planning&quot;), &quot;Territory and Quota Planning&quot; + BR(),Null) +
IF(INCLUDES(Sales_Apps__c, &quot;Prospect Analysis&quot;), &quot;Prospect Analysis&quot; + BR(),Null) +
IF(INCLUDES(Sales_Apps__c, &quot;Pipeline Management&quot;), &quot;Pipeline Management&quot; + BR(),Null) +
IF(INCLUDES(Sales_Apps__c, &quot;Sales Rep Performance&quot;), &quot;Sales Rep Performance&quot; + BR(),Null) +
IF(INCLUDES(Sales_Apps__c, &quot;Sales Rep Badge&quot;), &quot;Sales Rep Badge&quot; + BR(),Null) +
IF(INCLUDES(Sales_Apps__c, &quot;Other&quot;), &quot;Other&quot; + BR(),Null)</formula>
        <label>Sales Apps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Services__c</fullName>
        <formula>IF(INCLUDES(Services__c, &quot;(080.000) Reporting&quot;), &quot;(080.000) Reporting&quot; + BR(),Null) +
IF(INCLUDES(Services__c, &quot;(081.000) Data&quot;), &quot;(081.000) Data&quot; + BR(),Null) +
IF(INCLUDES(Services__c, &quot;(082.000) Analytical&quot;), &quot;(082.000) Analytical&quot; + BR(),Null) +
IF(INCLUDES(Services__c, &quot;(083.000) Transactional&quot;), &quot;(083.000) Transactional&quot; + BR(),Null) +
IF(INCLUDES(Services__c, &quot;(084.000) Distribution&quot;), &quot;(084.000) Distribution&quot; + BR(),Null) +
IF(INCLUDES(Services__c, &quot;(085.000) Alerting&quot;), &quot;(085.000) Alerting&quot; + BR(),Null) +
IF(INCLUDES(Services__c, &quot;(086.000) Security&quot;), &quot;(086.000) Security&quot; + BR(),Null) +
IF(INCLUDES(Services__c, &quot;(087.000) Physical Access&quot;), &quot;(087.000) Physical Access&quot; + BR(),Null) +
IF(INCLUDES(Services__c, &quot;(088.000) Telemetry&quot;), &quot;(088.000) Telemetry&quot; + BR(),Null) +
IF(INCLUDES(Services__c, &quot;(089.000) Logical Access&quot;), &quot;(089.000) Logical Access&quot; + BR(),Null) +
IF(INCLUDES(Services__c, &quot;(090.000) Localization&quot;), &quot;(090.000) Localization&quot; + BR(),Null)</formula>
        <label>Services</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Solution_Needs_Analytics__c</fullName>
        <formula>IF(INCLUDES(Solution_Needs_Analytics__c, &quot;A Unified Platform of Integrated Capabilities&quot;), &quot;A Unified Platform of Integrated Capabilities&quot; + BR(),Null)
+
IF(INCLUDES(Solution_Needs_Analytics__c, &quot;Analytics and Reporting&quot;), &quot;Analytics and Reporting&quot; + BR(),Null)
+ 
IF(INCLUDES(Solution_Needs_Analytics__c, &quot;Big Data Analytics&quot;), &quot;Big Data Analytics&quot; + BR(),Null)
+
IF(INCLUDES(Solution_Needs_Analytics__c, &quot;Enterprise Data Discovery&quot;), &quot;Enterprise Data Discovery&quot; + BR(),Null)
+
IF(INCLUDES(Solution_Needs_Analytics__c, &quot;Data Preparation&quot;), &quot;Data Preparation&quot; + BR(),Null)
+
IF(INCLUDES(Solution_Needs_Analytics__c, &quot;Distribution and Alerting&quot;), &quot;Distribution and Alerting&quot; + BR(),Null)
+
IF(INCLUDES(Solution_Needs_Analytics__c, &quot;Dashboards and Scorecards&quot;), &quot;Dashboards and Scorecards&quot; + BR(),Null)
+
IF(INCLUDES(Solution_Needs_Analytics__c, &quot;Charts, Graphs, and Advanced Visualizations&quot;), &quot;Charts, Graphs, and Advanced Visualizations&quot; + BR(),Null)
+
IF(INCLUDES(Solution_Needs_Analytics__c, &quot;Geospatial Analytics and Mapping&quot;), &quot;Geospatial Analytics and Mapping&quot; + BR(),Null)
+
IF(INCLUDES(Solution_Needs_Analytics__c, &quot;Customize Web and Mobile Applications (SDK)&quot;), &quot;Customize Web and Mobile Applications (SDK)&quot; + BR(),Null)
+
IF(INCLUDES(Solution_Needs_Analytics__c, &quot;Embedded BI&quot;), &quot;Embedded BI&quot; + BR(),Null)</formula>
        <label>Solution Needs - Analytics</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Solution_Needs_Mobility__c</fullName>
        <formula>IF(INCLUDES(Solution_Needs_Mobility__c, &quot;Mobile Analytics&quot;), &quot;Mobile Analytics&quot; + BR(),Null)
+
IF(INCLUDES(Solution_Needs_Mobility__c, &quot;Mobile Productivity Apps&quot;), &quot;Mobile Productivity Apps&quot; + BR(),Null)
+ 
IF(INCLUDES(Solution_Needs_Mobility__c, &quot;B2B/B2C Apps (White Label)&quot;), &quot;B2B/B2C Apps (White Label)&quot; + BR(),Null)</formula>
        <label>Solution Needs - Mobility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Solution_Needs_Security__c</fullName>
        <formula>IF(INCLUDES(Solution_Needs_Security__c, &quot;Employee Access to Logical and Physical Assets&quot;), &quot;Employee Access to Logical and Physical Assets&quot; + BR(),Null)
+
IF(INCLUDES(Solution_Needs_Security__c, &quot;Customer Engagement via Digital Loyalty Cards&quot;), &quot;Customer Engagement via Digital Loyalty Cards&quot; + BR(),Null)
+ 
IF(INCLUDES(Solution_Needs_Security__c, &quot;Usher for Your MicroStrategy Analytics Implementation&quot;), &quot;Usher for Your MicroStrategy Analytics Implementation&quot; + BR(),Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution Needs - Security</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Technical_Solutions__c</fullName>
        <formula>IF(INCLUDES(Technical_Solutions__c, &quot;Enterprise Analytics Platform&quot;), &quot;Enterprise Analytics Platform&quot; + BR(),Null) 
+ 
IF(INCLUDES(Technical_Solutions__c, &quot;Big Data Analytics&quot;), &quot;Big Data Analytics&quot; + BR(),Null) 
+ 
IF(INCLUDES(Technical_Solutions__c, &quot;Enterprise Data Discovery&quot;), &quot;Enterprise Data Discovery&quot; + BR(),Null) 
+ 
IF(INCLUDES(Technical_Solutions__c, &quot;Embedded Analytics&quot;), &quot;Embedded Analytics&quot; + BR(),Null) 
+ 
IF(INCLUDES(Technical_Solutions__c, &quot;Mobile Analytics&quot;), &quot;Mobile Analytics&quot; + BR(),Null) 
+ 
IF(INCLUDES(Technical_Solutions__c, &quot;Mobile Productivity Apps&quot;), &quot;Mobile Productivity Apps&quot; + BR(),Null) 
+ 
IF(INCLUDES(Technical_Solutions__c, &quot;Employee Access&quot;), &quot;Employee Access&quot; + BR(),Null) 
+ 
IF(INCLUDES(Technical_Solutions__c, &quot;Multi-Channel Customer Experience&quot;), &quot;Multi-Channel Customer Experience&quot; + BR(),Null) 
+ 
IF(INCLUDES(Solution_Needs_Analytics__c, &quot;MicroStrategy Cloud&quot;), &quot;MicroStrategy Cloud&quot; + BR(),Null)</formula>
        <label>Technical Solutions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Telecom_Apps__c</fullName>
        <formula>IF(INCLUDES(Telecom_Apps__c, &quot;Advertising Optimization&quot;), &quot;Advertising Optimization&quot; + BR(),Null) +
IF(INCLUDES(Telecom_Apps__c, &quot;Churn Analysis&quot;), &quot;Churn Analysis&quot; + BR(),Null) +
IF(INCLUDES(Telecom_Apps__c, &quot;Capacity Planning&quot;), &quot;Capacity Planning&quot; + BR(),Null) +
IF(INCLUDES(Telecom_Apps__c, &quot;Fraud Management&quot;), &quot;Fraud Management&quot; + BR(),Null) +
IF(INCLUDES(Telecom_Apps__c, &quot;Audience Insight&quot;), &quot;Audience Insight&quot; + BR(),Null) +
IF(INCLUDES(Telecom_Apps__c, &quot;Service Assurance&quot;), &quot;Service Assurance&quot; + BR(),Null) +
IF(INCLUDES(Telecom_Apps__c, &quot;Store Productivity&quot;), &quot;Store Productivity&quot; + BR(),Null) +
IF(INCLUDES(Telecom_Apps__c, &quot;Field Automation&quot;), &quot;Field Automation&quot; + BR(),Null) +
IF(INCLUDES(Telecom_Apps__c, &quot;Field Operations Manager&quot;), &quot;Field Operations Manager&quot; + BR(),Null) +
IF(INCLUDES(Telecom_Apps__c, &quot;Customer ID&quot;), &quot;Customer ID&quot; + BR(),Null) +
IF(INCLUDES(Telecom_Apps__c, &quot;Employee ID&quot;), &quot;Employee ID&quot; + BR(),Null) +
IF(INCLUDES(Telecom_Apps__c, &quot;Manager Productivity Tool&quot;), &quot;Manager Productivity Tool&quot; + BR(),Null) +
IF(INCLUDES(Telecom_Apps__c, &quot;Other&quot;), &quot;Other&quot; + BR(),Null)</formula>
        <label>Telecom Apps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Tools__c</fullName>
        <formula>IF(INCLUDES(Tools__c, &quot;(010.000) Data&quot;), &quot;(010.000) Data&quot; + BR(),Null) +
IF(INCLUDES(Tools__c, &quot;(011.000) Modeling&quot;), &quot;(011.000) Modeling&quot; + BR(),Null) +
IF(INCLUDES(Tools__c, &quot;(012.000) Analytical&quot;), &quot;(012.000) Analytical&quot; + BR(),Null) +
IF(INCLUDES(Tools__c, &quot;(013.000) Reporting&quot;), &quot;(013.000) Reporting&quot; + BR(),Null) +
IF(INCLUDES(Tools__c, &quot;(014.000) Visualization&quot;), &quot;(014.000) Visualization&quot; + BR(),Null) +
IF(INCLUDES(Tools__c, &quot;(015.000) Application&quot;), &quot;(015.000) Application&quot; + BR(),Null) +
IF(INCLUDES(Tools__c, &quot;(016.000) Testing&quot;), &quot;(016.000) Testing&quot; + BR(),Null) +
IF(INCLUDES(Tools__c, &quot;(017.000) User Administration&quot;), &quot;(017.000) User Administration&quot; + BR(),Null) +
IF(INCLUDES(Tools__c, &quot;(018.000) Deployment&quot;), &quot;(018.000) Deployment&quot; + BR(),Null) +
IF(INCLUDES(Tools__c, &quot;(019.000) Automation&quot;), &quot;(019.000) Automation&quot; + BR(),Null) +
IF(INCLUDES(Tools__c, &quot;(020.000) Monitoring&quot;), &quot;(020.000) Monitoring&quot; + BR(),Null) +
IF(INCLUDES(Tools__c, &quot;(021.000) Installation&quot;), &quot;(021.000) Installation&quot; + BR(),Null) +
IF(INCLUDES(Tools__c, &quot;(022.000) Translation&quot;), &quot;(022.000) Translation&quot; + BR(),Null)</formula>
        <label>Tools</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_X100_000_RDBMS_1__c</fullName>
        <formula>IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.001) Teradata&quot;), &quot;(100.001) Teradata&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.002) Oracle Database&quot;), &quot;(100.002) Oracle Database&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.003) Microsoft SQL Server&quot;), &quot;(100.003) Microsoft SQL Server&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.004) SAP HANA&quot;), &quot;(100.004) SAP HANA&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.005) Amazon Redshift&quot;), &quot;(100.005) Amazon Redshift&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.006) IBM DB2&quot;), &quot;(100.006) IBM DB2&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.007) IBM Netezza&quot;), &quot;(100.007) IBM Netezza&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.008) HP Vertica&quot;), &quot;(100.008) HP Vertica&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.009) Actian Ingres&quot;), &quot;(100.009) Actian Ingres&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.010) Actian Matrix&quot;), &quot;(100.010) Actian Matrix&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.011) Actian Vector&quot;), &quot;(100.011) Actian Vector&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.012) Amazon Aurora&quot;), &quot;(100.012) Amazon Aurora&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.013) Arcadia Data&quot;), &quot;(100.013) Arcadia Data&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.014) Cassandra&quot;), &quot;(100.014) Cassandra&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.015) Cirro&quot;), &quot;(100.015) Cirro&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.016) Cisco DV&quot;), &quot;(100.016) Cisco DV&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.017) DataDirect Cloud&quot;), &quot;(100.017) DataDirect Cloud&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.018) Denodo&quot;), &quot;(100.018) Denodo&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.019) EnterpriseDB&quot;), &quot;(100.019) EnterpriseDB&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.020) EXAsolution&quot;), &quot;(100.020) EXAsolution&quot; + BR(),Null)</formula>
        <label>100.000 RDBMS 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_X100_000_RDBMS_2__c</fullName>
        <formula>IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.021) IBM DB2 for i&quot;), &quot;(100.021) IBM DB2 for i&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.022) IBM DB2 for Z/OS&quot;), &quot;(100.022) IBM DB2 for Z/OS&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.023) IBM Informix&quot;), &quot;(100.023) IBM Informix&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.024) IBM Informix Extended Parallel Server&quot;), &quot;(100.024) IBM Informix Extended Parallel Server&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.025) Infobright&quot;), &quot;(100.025) Infobright&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.026) Kognitio WX&quot;), &quot;(100.026) Kognitio WX&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.027) MariaDB&quot;), &quot;(100.027) MariaDB&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.028) MarkLogic&quot;), &quot;(100.028) MarkLogic&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.029) MemSQL&quot;), &quot;(100.029) MemSQL&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.030) Microsoft Parallel Data Warehouse&quot;), &quot;(100.030) Microsoft Parallel Data Warehouse&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.031) Microsoft Azure SQL Database&quot;), &quot;(100.031) Microsoft Azure SQL Database&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.032) Oracle MySQL&quot;), &quot;(100.032) Oracle MySQL&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.033) Parstream&quot;), &quot;(100.033) Parstream&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.034) Pivotal Greenplum Database&quot;), &quot;(100.034) Pivotal Greenplum Database&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.035) PostgreSQL Database Server&quot;), &quot;(100.035) PostgreSQL Database Server&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.036) Salesforce&quot;), &quot;(100.036) Salesforce&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.037) SAP Sybase ASE&quot;), &quot;(100.037) SAP Sybase ASE&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.038) SAP Sybase IQ&quot;), &quot;(100.038) SAP Sybase IQ&quot; + BR(),Null) +
IF(INCLUDES(X100_000_RDBMS__c, &quot;(100.039) Teradata Aster Database&quot;), &quot;(100.039) Teradata Aster Database&quot; + BR(),Null)</formula>
        <label>100.000 RDBMS 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_X101_000_OLAP__c</fullName>
        <formula>IF(INCLUDES(X101_000_OLAP__c, &quot;(101.001) Microsoft SQL Server Analysis Services&quot;), &quot;(101.001) Microsoft SQL Server Analysis Services&quot; + BR(),Null) +
IF(INCLUDES(X101_000_OLAP__c, &quot;(101.002) Oracle Essbase&quot;), &quot;(101.002) Oracle Essbase&quot; + BR(),Null) +
IF(INCLUDES(X101_000_OLAP__c, &quot;(101.003) IBM Cognos TM1&quot;), &quot;(101.003) IBM Cognos TM1&quot; + BR(),Null) +
IF(INCLUDES(X101_000_OLAP__c, &quot;(101.004) SAP BW&quot;), &quot;(101.004) SAP BW&quot; + BR(),Null) +
IF(INCLUDES(X101_000_OLAP__c, &quot;(101.005) Oracle Hyperion&quot;), &quot;(101.005) Oracle Hyperion&quot; + BR(),Null)</formula>
        <label>101.000 OLAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_X102_000_Big_Data__c</fullName>
        <formula>IF(INCLUDES(X102_000_Big_Data__c, &quot;(102.001) Cloudera CDH&quot;), &quot;(102.001) Cloudera CDH&quot; + BR(),Null) +
IF(INCLUDES(X102_000_Big_Data__c, &quot;(102.002) Hortonworks HDP&quot;), &quot;(102.002) Hortonworks HDP&quot; + BR(),Null) +
IF(INCLUDES(X102_000_Big_Data__c, &quot;(102.003) MapR&quot;), &quot;(102.003) MapR&quot; + BR(),Null) +
IF(INCLUDES(X102_000_Big_Data__c, &quot;(102.004) IBM BigInsights&quot;), &quot;(102.004) IBM BigInsights&quot; + BR(),Null) +
IF(INCLUDES(X102_000_Big_Data__c, &quot;(102.005) Amazon EMR&quot;), &quot;(102.005) Amazon EMR&quot; + BR(),Null) +
IF(INCLUDES(X102_000_Big_Data__c, &quot;(102.006) Microsoft HDInsight&quot;), &quot;(102.006) Microsoft HDInsight&quot; + BR(),Null) +
IF(INCLUDES(X102_000_Big_Data__c, &quot;(102.007) Pivotal HD&quot;), &quot;(102.007) Pivotal HD&quot; + BR(),Null) +
IF(INCLUDES(X102_000_Big_Data__c, &quot;(102.008) Presto&quot;), &quot;(102.008) Presto&quot; + BR(),Null) +
IF(INCLUDES(X102_000_Big_Data__c, &quot;(102.009) Apache Hive&quot;), &quot;(102.009) Apache Hive&quot; + BR(),Null) +
IF(INCLUDES(X102_000_Big_Data__c, &quot;(102.010) Apache Impala&quot;), &quot;(102.010) Apache Impala&quot; + BR(),Null) +
IF(INCLUDES(X102_000_Big_Data__c, &quot;(102.011) Apache Solr&quot;), &quot;(102.011) Apache Solr&quot; + BR(),Null) +
IF(INCLUDES(X102_000_Big_Data__c, &quot;(102.012) Apache SparkSQL&quot;), &quot;(102.012) Apache SparkSQL&quot; + BR(),Null) +
IF(INCLUDES(X102_000_Big_Data__c, &quot;(102.013) Pivotal HAWQ&quot;), &quot;(102.013) Pivotal HAWQ&quot; + BR(),Null) +
IF(INCLUDES(X102_000_Big_Data__c, &quot;(102.014) MongoDB&quot;), &quot;(102.014) MongoDB&quot; + BR(),Null) +
IF(INCLUDES(X102_000_Big_Data__c, &quot;(102.015) Splunk&quot;), &quot;(102.015) Splunk&quot; + BR(),Null) +
IF(INCLUDES(X102_000_Big_Data__c, &quot;(102.016) Hadoop (HDFS + MapReduce)&quot;), &quot;(102.016) Hadoop (HDFS + MapReduce)&quot; + BR(),Null)</formula>
        <label>102.000 Big Data</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_X103_000_Local_Data__c</fullName>
        <formula>IF(INCLUDES(X103_000_Local_Data__c, &quot;(103.001) Files on disk&quot;), &quot;(103.001) Files on disk&quot; + BR(),Null) +
IF(INCLUDES(X103_000_Local_Data__c, &quot;(103.002) Files in comma-separated format&quot;), &quot;(103.002) Files in comma-separated format&quot; + BR(),Null) +
IF(INCLUDES(X103_000_Local_Data__c, &quot;(103.003) Files in plain text format&quot;), &quot;(103.003) Files in plain text format&quot; + BR(),Null) +
IF(INCLUDES(X103_000_Local_Data__c, &quot;(103.004) Files in Microsoft Excel format&quot;), &quot;(103.004) Files in Microsoft Excel format&quot; + BR(),Null) +
IF(INCLUDES(X103_000_Local_Data__c, &quot;(103.005) Files in Microsoft Access format&quot;), &quot;(103.005) Files in Microsoft Access format&quot; + BR(),Null) +
IF(INCLUDES(X103_000_Local_Data__c, &quot;(103.006) Files in XML format&quot;), &quot;(103.006) Files in XML format&quot; + BR(),Null) +
IF(INCLUDES(X103_000_Local_Data__c, &quot;(103.007) Files in JSON format&quot;), &quot;(103.007) Files in JSON format&quot; + BR(),Null) +
IF(INCLUDES(X103_000_Local_Data__c, &quot;(103.008) Files on FTP&quot;), &quot;(103.008) Files on FTP&quot; + BR(),Null)</formula>
        <label>103.000 Local Data</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_X104_000_Cloud_Data__c</fullName>
        <formula>IF(INCLUDES(X104_000_Cloud_Data__c, &quot;(104.001) Web services&quot;), &quot;(104.001) Web services&quot; + BR(),Null) +
IF(INCLUDES(X104_000_Cloud_Data__c, &quot;(104.002) Facebook&quot;), &quot;(104.002) Facebook&quot; + BR(),Null) +
IF(INCLUDES(X104_000_Cloud_Data__c, &quot;(104.003) Twitter&quot;), &quot;(104.003) Twitter&quot; + BR(),Null) +
IF(INCLUDES(X104_000_Cloud_Data__c, &quot;(104.004) Salesforce Reports&quot;), &quot;(104.004) Salesforce Reports&quot; + BR(),Null) +
IF(INCLUDES(X104_000_Cloud_Data__c, &quot;(104.005) Eloqua&quot;), &quot;(104.005) Eloqua&quot; + BR(),Null) +
IF(INCLUDES(X104_000_Cloud_Data__c, &quot;(104.006) Google Analytics&quot;), &quot;(104.006) Google Analytics&quot; + BR(),Null) +
IF(INCLUDES(X104_000_Cloud_Data__c, &quot;(104.007) Google BigQuery&quot;), &quot;(104.007) Google BigQuery&quot; + BR(),Null) +
IF(INCLUDES(X104_000_Cloud_Data__c, &quot;(104.008) Wikipedia data&quot;), &quot;(104.008) Wikipedia data&quot; + BR(),Null) +
IF(INCLUDES(X104_000_Cloud_Data__c, &quot;(104.009) Files on Dropbox&quot;), &quot;(104.009) Files on Dropbox&quot; + BR(),Null) +
IF(INCLUDES(X104_000_Cloud_Data__c, &quot;(104.010) Files on Google Drive&quot;), &quot;(104.010) Files on Google Drive&quot; + BR(),Null)</formula>
        <label>104.000 Cloud Data</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_X105_000_Enterprise_BI__c</fullName>
        <formula>IF(INCLUDES(X105_000_Enterprise_BI__c, &quot;(105.001) SAP BO Reports&quot;), &quot;(105.001) SAP BO Reports&quot; + BR(),Null) +
IF(INCLUDES(X105_000_Enterprise_BI__c, &quot;(105.002) Cognos Reports&quot;), &quot;(105.002) Cognos Reports&quot; + BR(),Null) +
IF(INCLUDES(X105_000_Enterprise_BI__c, &quot;(105.003) OBIEE Reports&quot;), &quot;(105.003) OBIEE Reports&quot; + BR(),Null) +
IF(INCLUDES(X105_000_Enterprise_BI__c, &quot;(105.004) Amazon Quicksight&quot;), &quot;(105.004) Amazon Quicksight&quot; + BR(),Null)</formula>
        <label>105.000 Enterprise BI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_X106_000_Remote_Data__c</fullName>
        <formula>IF(INCLUDES(X106_000_Remote_Data__c, &quot;(106.001) XML data&quot;), &quot;(106.001) XML data&quot; + BR(),Null) +
IF(INCLUDES(X106_000_Remote_Data__c, &quot;(106.002) JSON data&quot;), &quot;(106.002) JSON data&quot; + BR(),Null) +
IF(INCLUDES(X106_000_Remote_Data__c, &quot;(106.003) Custom data&quot;), &quot;(106.003) Custom data&quot; + BR(),Null)</formula>
        <label>106.000 Remote Data</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_X107_000_ETL_DS__c</fullName>
        <formula>IF(INCLUDES(X107_000_ETL_DS__c, &quot;(107.001) Informatica Data Services&quot;), &quot;(107.001) Informatica Data Services&quot; + BR(),Null) +
IF(INCLUDES(X107_000_ETL_DS__c, &quot;(107.002) SAP Data Services&quot;), &quot;(107.002) SAP Data Services&quot; + BR(),Null) +
IF(INCLUDES(X107_000_ETL_DS__c, &quot;(107.003) IBM Data Services&quot;), &quot;(107.003) IBM Data Services&quot; + BR(),Null) +
IF(INCLUDES(X107_000_ETL_DS__c, &quot;(107.004) Theobald&quot;), &quot;(107.004) Theobald&quot; + BR(),Null) +
IF(INCLUDES(X107_000_ETL_DS__c, &quot;(107.005) Paxata&quot;), &quot;(107.005) Paxata&quot; + BR(),Null) +
IF(INCLUDES(X107_000_ETL_DS__c, &quot;(107.006) Trifecta&quot;), &quot;(107.006) Trifecta&quot; + BR(),Null)</formula>
        <label>107.000 ETL / DS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_X108_00_Statistical__c</fullName>
        <formula>IF(INCLUDES(X108_00_Statistical__c, &quot;(108.001) R Script&quot;), &quot;(108.001) R Script&quot; + BR(),Null) +
IF(INCLUDES(X108_00_Statistical__c, &quot;(108.002) SAS&quot;), &quot;(108.002) SAS&quot; + BR(),Null)</formula>
        <label>108.00 Statistical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_X109_000_Directory__c</fullName>
        <formula>IF(INCLUDES(X109_000_Directory__c, &quot;(109.001) Microsoft Active Directory Synchronization&quot;), &quot;(109.001) Microsoft Active Directory Synchronization&quot; + BR(),Null) +
IF(INCLUDES(X109_000_Directory__c, &quot;(109.002) Microsoft Active Directory Data Source&quot;), &quot;(109.002) Microsoft Active Directory Data Source&quot; + BR(),Null) +
IF(INCLUDES(X109_000_Directory__c, &quot;(109.003) Microsoft Active Directory Authentication&quot;), &quot;(109.003) Microsoft Active Directory Authentication&quot; + BR(),Null) +
IF(INCLUDES(X109_000_Directory__c, &quot;(109.004) Computer Associates Directory&quot;), &quot;(109.004) Computer Associates Directory&quot; + BR(),Null) +
IF(INCLUDES(X109_000_Directory__c, &quot;(109.005) Computer Associates Directory Data Source&quot;), &quot;(109.005) Computer Associates Directory Data Source&quot; + BR(),Null) +
IF(INCLUDES(X109_000_Directory__c, &quot;(109.006) Computer Associates Directory Authentication&quot;), &quot;(109.006) Computer Associates Directory Authentication&quot; + BR(),Null) +
IF(INCLUDES(X109_000_Directory__c, &quot;(109.007) OpenLDAP&quot;), &quot;(109.007) OpenLDAP&quot; + BR(),Null) +
IF(INCLUDES(X109_000_Directory__c, &quot;(109.008) Oracle Identity Management&quot;), &quot;(109.008) Oracle Identity Management&quot; + BR(),Null) +
IF(INCLUDES(X109_000_Directory__c, &quot;(109.009) Ping Federate&quot;), &quot;(109.009) Ping Federate&quot; + BR(),Null) +
IF(INCLUDES(X109_000_Directory__c, &quot;(109.010) IBM Tivoli&quot;), &quot;(109.010) IBM Tivoli&quot; + BR(),Null) +
IF(INCLUDES(X109_000_Directory__c, &quot;(109.011) Apache Directory&quot;), &quot;(109.011) Apache Directory&quot; + BR(),Null)</formula>
        <label>109.000 Directory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_X110_000_Network__c</fullName>
        <formula>IF(INCLUDES(X110_000_Network__c, &quot;(110.001) Aruba&quot;), &quot;(110.001) Aruba&quot; + BR(),Null) +
IF(INCLUDES(X110_000_Network__c, &quot;(110.002) F5&quot;), &quot;(110.002) F5&quot; + BR(),Null) +
IF(INCLUDES(X110_000_Network__c, &quot;(110.003) Barracuda&quot;), &quot;(110.003) Barracuda&quot; + BR(),Null) +
IF(INCLUDES(X110_000_Network__c, &quot;(110.004) Fortinet&quot;), &quot;(110.004) Fortinet&quot; + BR(),Null) +
IF(INCLUDES(X110_000_Network__c, &quot;(110.005) Cisco&quot;), &quot;(110.005) Cisco&quot; + BR(),Null) +
IF(INCLUDES(X110_000_Network__c, &quot;(110.006) Juniper Networks&quot;), &quot;(110.006) Juniper Networks&quot; + BR(),Null) +
IF(INCLUDES(X110_000_Network__c, &quot;(110.007) Citrix&quot;), &quot;(110.007) Citrix&quot; + BR(),Null) +
IF(INCLUDES(X110_000_Network__c, &quot;(110.008) Paloalto Networks&quot;), &quot;(110.008) Paloalto Networks&quot; + BR(),Null) +
IF(INCLUDES(X110_000_Network__c, &quot;(110.009) PulseSecure&quot;), &quot;(110.009) PulseSecure&quot; + BR(),Null) +
IF(INCLUDES(X110_000_Network__c, &quot;(110.010) CheckPoint&quot;), &quot;(110.010) CheckPoint&quot; + BR(),Null)</formula>
        <label>110.000 Network</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_X111_000_EMM__c</fullName>
        <formula>IF(INCLUDES(X111_000_EMM__c, &quot;(111.001) Good Technology&quot;), &quot;(111.001) Good Technology&quot; + BR(),Null) +
IF(INCLUDES(X111_000_EMM__c, &quot;(111.002) AirWatch by VMWare&quot;), &quot;(111.002) AirWatch by VMWare&quot; + BR(),Null) +
IF(INCLUDES(X111_000_EMM__c, &quot;(111.003) MobileIron&quot;), &quot;(111.003) MobileIron&quot; + BR(),Null) +
IF(INCLUDES(X111_000_EMM__c, &quot;(111.004) XenMobile by Citrix&quot;), &quot;(111.004) XenMobile by Citrix&quot; + BR(),Null) +
IF(INCLUDES(X111_000_EMM__c, &quot;(111.005) MaaS360 by Fiberlink-IBM&quot;), &quot;(111.005) MaaS360 by Fiberlink-IBM&quot; + BR(),Null) +
IF(INCLUDES(X111_000_EMM__c, &quot;(111.006) SAP Mobile Secure&quot;), &quot;(111.006) SAP Mobile Secure&quot; + BR(),Null) +
IF(INCLUDES(X111_000_EMM__c, &quot;(111.007) Symantec&quot;), &quot;(111.007) Symantec&quot; + BR(),Null)</formula>
        <label>111.000 EMM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_X112_000_Server__c</fullName>
        <formula>IF(INCLUDES(X111_000_EMM__c, &quot;(112.001) Windows&quot;), &quot;(112.001) Windows&quot; + BR(),Null) +
IF(INCLUDES(X111_000_EMM__c, &quot;(112.002) Linux&quot;), &quot;(112.002) Linux&quot; + BR(),Null) +
IF(INCLUDES(X111_000_EMM__c, &quot;(112.003) Amazon&quot;), &quot;(112.003) Amazon&quot; + BR(),Null) +
IF(INCLUDES(X111_000_EMM__c, &quot;(112.004) Azure&quot;), &quot;(112.004) Azure&quot; + BR(),Null)</formula>
        <label>112.000 Server</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_X113_000_Charting__c</fullName>
        <formula>IF(INCLUDES(X113_000_Charting__c, &quot;(113.001) D3&quot;), &quot;(113.001) D3&quot; + BR(),Null) +
IF(INCLUDES(X113_000_Charting__c, &quot;(113.002) Hi Charts&quot;), &quot;(113.002) Hi Charts&quot; + BR(),Null)</formula>
        <label>113.000 Charting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_X114_000_Mapping__c</fullName>
        <formula>IF(INCLUDES(X114_000_Mapping__c, &quot;(114.001) Google Maps&quot;), &quot;(114.001) Google Maps&quot; + BR(),Null) +
IF(INCLUDES(X114_000_Mapping__c, &quot;(114.002) ESRI&quot;), &quot;(114.002) ESRI&quot; + BR(),Null) +
IF(INCLUDES(X114_000_Mapping__c, &quot;(114.003) Apple Maps&quot;), &quot;(114.003) Apple Maps&quot; + BR(),Null)</formula>
        <label>114.000 Mapping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_X115_000_Media__c</fullName>
        <formula>IF(INCLUDES(X115_000_Media__c, &quot;(115.001) YouTube&quot;), &quot;(115.001) YouTube&quot; + BR(),Null) +
IF(INCLUDES(X115_000_Media__c, &quot;(115.002) Wikipedia&quot;), &quot;(115.002) Wikipedia&quot; + BR(),Null)</formula>
        <label>115.000 Media</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_X116_000_PACS__c</fullName>
        <formula>IF(INCLUDES(X116_000_PACS__c, &quot;(116.001) Datawatch&quot;), &quot;(116.001) Datawatch&quot; + BR(),Null) +
IF(INCLUDES(X116_000_PACS__c, &quot;(116.002) Tyco&quot;), &quot;(116.002) Tyco&quot; + BR(),Null) +
IF(INCLUDES(X116_000_PACS__c, &quot;(116.003) Lenel&quot;), &quot;(116.003) Lenel&quot; + BR(),Null) +
IF(INCLUDES(X116_000_PACS__c, &quot;(116.004) Honeywell&quot;), &quot;(116.004) Honeywell&quot; + BR(),Null) +
IF(INCLUDES(X116_000_PACS__c, &quot;(116.005) Paxton&quot;), &quot;(116.005) Paxton&quot; + BR(),Null) +
IF(INCLUDES(X116_000_PACS__c, &quot;(116.006) S2 Security&quot;), &quot;(116.006) S2 Security&quot; + BR(),Null) +
IF(INCLUDES(X116_000_PACS__c, &quot;(116.007) Generic&quot;), &quot;(116.007) Generic&quot; + BR(),Null)</formula>
        <label>116.000 PACS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_X117_000_CMS__c</fullName>
        <formula>IF(INCLUDES(X117_000_CMS__c, &quot;(117.001) SharePoint&quot;), &quot;(117.001) SharePoint&quot; + BR(),Null) +
IF(INCLUDES(X117_000_CMS__c, &quot;(117.002) WordPress&quot;), &quot;(117.002) WordPress&quot; + BR(),Null) +
IF(INCLUDES(X117_000_CMS__c, &quot;(117.003) Drupal&quot;), &quot;(117.003) Drupal&quot; + BR(),Null) +
IF(INCLUDES(X117_000_CMS__c, &quot;(117.004) Joomla&quot;), &quot;(117.004) Joomla&quot; + BR(),Null) +
IF(INCLUDES(X117_000_CMS__c, &quot;(117.005) Concrete5&quot;), &quot;(117.005) Concrete5&quot; + BR(),Null) +
IF(INCLUDES(X117_000_CMS__c, &quot;(117.006) TextPattern&quot;), &quot;(117.006) TextPattern&quot; + BR(),Null) +
IF(INCLUDES(X117_000_CMS__c, &quot;(117.007) DotNetNuke&quot;), &quot;(117.007) DotNetNuke&quot; + BR(),Null) +
IF(INCLUDES(X117_000_CMS__c, &quot;(117.008) Umbraco&quot;), &quot;(117.008) Umbraco&quot; + BR(),Null) +
IF(INCLUDES(X117_000_CMS__c, &quot;(117.009) TinyCMS&quot;), &quot;(117.009) TinyCMS&quot; + BR(),Null) +
IF(INCLUDES(X117_000_CMS__c, &quot;(117.010) Alfresco&quot;), &quot;(117.010) Alfresco&quot; + BR(),Null) +
IF(INCLUDES(X117_000_CMS__c, &quot;(117.011) ModX&quot;), &quot;(117.011) ModX&quot; + BR(),Null) +
IF(INCLUDES(X117_000_CMS__c, &quot;(117.012) RefineryCMS&quot;), &quot;(117.012) RefineryCMS&quot; + BR(),Null)</formula>
        <label>117.000 CMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_X118_000_Enterprise_Apps__c</fullName>
        <formula>IF(INCLUDES(X118_000_Enterprise_Apps__c, &quot;(118.001) SAP ERP&quot;), &quot;(118.001) SAP ERP&quot; + BR(),Null) +
IF(INCLUDES(X118_000_Enterprise_Apps__c, &quot;(118.002) Oracle ERP&quot;), &quot;(118.002) Oracle ERP&quot; + BR(),Null) +
IF(INCLUDES(X118_000_Enterprise_Apps__c, &quot;(118.003) Oracle Peoplesoft&quot;), &quot;(118.003) Oracle Peoplesoft&quot; + BR(),Null) +
IF(INCLUDES(X118_000_Enterprise_Apps__c, &quot;(118.004) Oracle JD Edwards&quot;), &quot;(118.004) Oracle JD Edwards&quot; + BR(),Null) +
IF(INCLUDES(X118_000_Enterprise_Apps__c, &quot;(118.005) Infor Baan&quot;), &quot;(118.005) Infor Baan&quot; + BR(),Null) +
IF(INCLUDES(X118_000_Enterprise_Apps__c, &quot;(118.006) Infor Lawson&quot;), &quot;(118.006) Infor Lawson&quot; + BR(),Null)</formula>
        <label>118.000 Enterprise Apps</label>
        <type>Text</type>
    </fields>
</CustomObject>